default/objects/Bank_Account_Owner__c/Bank_Account_Owner__c.object-meta.xml
<CustomObject>
    <label>Bank Account Owner</label>
    <nameField>
        <label>Bank Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bank Account Owners</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>