default/objects/Bank_Account_Owner__c/fields/Birth_Date__c.field-meta.xml
<CustomField>
    <fullName>Birth_Date__c</fullName>
    <label>Birth Date</label>
    <length>20</length>
    <type>Text</type>
</CustomField>