default/objects/Bank_Account_Owner__c/fields/Citizenship__c.field-meta.xml
<CustomField>
    <fullName>Citizenship__c</fullName>
    <label>Citizenship</label>
    <length>50</length>
    <type>Text</type>
</CustomField>