default/objects/Bank_Account_Owner__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <label>Email</label>
    <length>50</length>
    <type>Text</type>
</CustomField>