default/objects/Bank_Account_Owner__c/fields/Kind__c.field-meta.xml
<CustomField>
    <fullName>Kind__c</fullName>
    <label>Kind</label>
    <length>10</length>
    <type>Text</type>
</CustomField>