default/objects/Bank_Account_Owner__c/fields/Personal_Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Personal_Document_Type__c</fullName>
    <label>Personal Document Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>