default/objects/Bank_Account_Owner__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <label>Phone</label>
    <length>50</length>
    <type>Text</type>
</CustomField>