default/objects/Bank_Account_Owner__c/fields/Polish_Nip__c.field-meta.xml
<CustomField>
    <fullName>Polish_Nip__c</fullName>
    <label>Polish Nip</label>
    <length>20</length>
    <type>Text</type>
</CustomField>