default/objects/Bank_Account_Owner__c/fields/Polish_Pesel__c.field-meta.xml
<CustomField>
    <fullName>Polish_Pesel__c</fullName>
    <label>Polish Pesel</label>
    <length>20</length>
    <type>Text</type>
</CustomField>