default/objects/Bank_Account_Owner__c/fields/Polish_Regon__c.field-meta.xml
<CustomField>
    <fullName>Polish_Regon__c</fullName>
    <label>Polish Regon</label>
    <length>50</length>
    <type>Text</type>
</CustomField>