default/objects/Bank_Account_Owner__c/fields/Transactions_Report__c.field-meta.xml
<CustomField>
    <fullName>Transactions_Report__c</fullName>
    <label>Transactions Report</label>
    <referenceTo>Transactions_Report__c</referenceTo>
    <relationshipLabel>Bank Account Owners</relationshipLabel>
    <relationshipName>Bank_Account_Owners</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>